--- a/points-spigot/src/main/resources/plugin.yml
+++ b/points-spigot/src/main/resources/plugin.yml
@@ -7,3 +7,8 @@ softdepend: [ BlueMap ]
 authors: [ RuscalWorld ]
 description: Plugin that adds ability to set points on the map to allow players to share interesting places easily
 website: https://github.com/ruscalworld/points
+commands:
+  setpoint:
+    description: Creates a new point
+  delpoint:
+    description: Deletes a point
