--- a/points-spigot/build.gradle
+++ b/points-spigot/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     compileOnly project(':points-common')
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+    implementation 'net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT'
 }
 
 processResources {
