--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Set up JDK 16
         uses: actions/setup-java@v1
         with:
-          java-version: '16'
+          java-version: 16
+      - run: java -version
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
