--- a/points-fabric/build.gradle
+++ b/points-fabric/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
 processResources {
     inputs.property "version", project.version
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     from(sourceSets.main.resources.srcDirs) {
         include "fabric.mod.json"
