--- a/points-fabric/gradle.properties
+++ b/points-fabric/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.17
-	yarn_mappings=1.17+build.6
-	loader_version=0.11.3
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.17
+yarn_mappings=1.17+build.9
+loader_version=0.11.3
 
 # Mod Properties
-	archives_base_name = points-fabric
+archives_base_name=points-fabric
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.25.1+build.416-1.16
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.35.0+1.17
