Fix version in plugin.yml

--- a/points-spigot/build.gradle
+++ b/points-spigot/build.gradle
@@ -23,7 +23,7 @@ processResources {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
     from(sourceSets.main.resources.srcDirs) {
-        expand 'version': project.version
+        expand 'project': project
     }
 }
 
