--- a/points-spigot/src/main/resources/plugin.yml
+++ b/points-spigot/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Points
 version: ${project.version}
-main: ru.ruscalworld.points.PointsSpigot
+main: ru.ruscalworld.points.spigot.PointsSpigot
 api-version: 1.16
 prefix: Points
 softdepend: [ BlueMap ]
