--- a/points-spigot/src/main/resources/plugin.yml
+++ b/points-spigot/src/main/resources/plugin.yml
@@ -14,6 +14,13 @@ commands:
   delpoint:
     description: Deletes a point
     permission: points.delete
+  getpoint:
+    description: Get coordinates of the point
+    permission: points.view
+    aliases:
+      - where
+      - whereis
+      - где
 permissions:
   points.create:
     default: true
@@ -21,3 +28,7 @@ permissions:
     default: true
     children:
       points.delete.others: false
+  points.view:
+    default: true
+    children:
+      points.view.private: false
