--- a/points-spigot/build.gradle
+++ b/points-spigot/build.gradle
@@ -18,12 +18,17 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+
+    maven {
+        url = 'https://libraries.minecraft.net/'
+    }
 }
 
 dependencies {
     implementation project(':points-common')
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     implementation 'net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT'
+    implementation 'me.lucko:commodore:1.10'
 }
 
 processResources {
@@ -39,7 +44,14 @@ shadowJar {
         include(dependency(":points-common"))
         include(dependency("ru.ruscalworld:storagelib"))
         include(dependency("net.kyori:.*"))
+        include(dependency("me.lucko:commodore"))
+        include(dependency("me.lucko:commodore-file"))
+        exclude(dependency('com.mojang:brigadier'))
     }
+
+    relocate 'me.lucko.commodore', 'ru.ruscalworld.points.dependencies.commodore'
+    relocate 'ru.ruscalworld.storagelib', 'ru.ruscalworld.points.dependencies.storagelib'
+    relocate 'net.kyori.adventure', 'ru.ruscalworld.points.dependencies.adventure'
 }
 
 tasks.build.dependsOn tasks.shadowJar
