--- a/points-spigot/build.gradle
+++ b/points-spigot/build.gradle
@@ -27,8 +27,8 @@ repositories {
 dependencies {
     implementation project(':points-common')
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
-    implementation 'net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT'
-    implementation 'me.lucko:commodore:1.10'
+    implementation 'net.kyori:adventure-platform-bukkit:4.0.1'
+    implementation 'me.lucko:commodore:1.11'
 }
 
 processResources {
